[workspace]
members = [
	"fixed-hash",
	"hashdb",
	"keccak-hash",
	"kvdb",
	"kvdb-memorydb",
	"kvdb-rocksdb",
	"memorydb",
	"parity-bytes",
	"parity-crypto",
	"path",
	"patricia_trie",
	"plain_hasher",
	"rlp",
	"transaction-pool",
	"trace-time",
	"trie-standardmap",
	"triehash",
	"uint"
]

[patch."https://github.com/paritytech/rust-rocksdb"]
rocksdb = { path = "/home/emeric/work/rust-rocksdb" }
