[workspace]
members = [
	"fixed-hash",
	"hashdb",
	"keccak-hash",
	"kvdb",
	"kvdb-memorydb",
	"kvdb-rocksdb",
	"memorydb",
	"parity-bytes",
	"parity-crypto",
	"parity-path",
	"patricia_trie",
	"plain_hasher",
	"rlp",
	"transaction-pool",
	"trace-time",
	"trie-standardmap",
	"triehash",
	"uint"
]
[patch.crates-io]
fixed-hash = { path = "./fixed-hash" }
memorydb = { path = "./memorydb" }
uint = { path = "./uint" }
ethereum-types = { path = "../parity-primitives/ethereum-types" }
