[workspace]
members = [
	"fixed-hash",
	"keccak-hash",
	"kvdb",
	"kvdb-memorydb",
	"kvdb-rocksdb",
	"parity-bytes",
	"parity-crypto",
	"parity-path",
	"plain_hasher",
	"rlp",
	"transaction-pool",
	"trace-time",
	"trie-standardmap",
	"triehash",
	"uint",
	"parity-util-mem",
	"primitive-types",
	"ethereum-types",
	"ethbloom",
]

[patch.crates-io]
trie-db = { git = "https://github.com/cheme/trie.git", branch = "simple-codec" }
memory-db = { git = "https://github.com/cheme/trie.git", branch = "simple-codec" }
keccak-hasher = { git = "https://github.com/cheme/trie.git", branch = "simple-codec" }
hash-db = { git = "https://github.com/cheme/trie.git", branch = "simple-codec" }
