[package]
name = "metrics-backends"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
repository = "https://github.com/paritytech/parity-common"
description = "Metrics backends and macros"
license = "GPL-3.0"

[dependencies]
prometheus = { version = "0.4", optional = true }
parking_lot = { version = "*", optional = true }
once_cell = { version = "0.1.6", default-features = false, optional = true }
failure = { version = "0.1.3" }
log = "0.4"
slog = { version = "^2", optional = true }
slog-json = { version = "^2", optional = true }
slog-async = { version = "^2", optional = true }
metrics-procedural = { path = "./procedural" }

[features]
default = ["std", "pro", "slogger"]
std = ["once_cell"]
pro = ["prometheus", "parking_lot"]
slogger = ["slog", "slog-json", "slog-async"]
