[package]
name = "patricia-trie-ethereum"
version = "0.2.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Merkle-Patricia Trie (Ethereum Style)"
license = "GPL-3.0"

[dependencies]
trie-db = { version = "0.12.2" }
keccak-hasher = { version = "0.12.2" }
hash-db = { version = "0.12.2" }
rlp = { version = "0.3.0", path = "../../rlp" }
parity-bytes = { version = "0.1", path = "../../parity-bytes" }

ethereum-types = "0.4"
elastic-array = "0.10"
